llvm/test/CodeGen/MIR/AMDGPU/s_wait_alu-error-bad-expression.mir
# RUN: not llc -mtriple=amdgcn -mcpu=gfx1200 -run-pass=none %s -o - 2>&1 | FileCheck %s

---
# CHECK: error: {{.*}} expected <CounterName>_<CounterNum>
name: BadExpression
body: |
  bb.0:
    S_WAITCNT_DEPCTR .BadExpression
...
